fix(skills): can default to vanilla skills